HasMany with through done.

--- a/www/plugins/demo/workflow/models/workflow/fields.yaml
+++ b/www/plugins/demo/workflow/models/workflow/fields.yaml
@@ -70,5 +70,6 @@ secondaryTabs:
             targetModel: Demo\Workflow\Models\WorkflowTransition
             targetKey: workflow_id
             throughModel: Demo\Workflow\Models\WorkflowEntity
+            otherKey: workflow_entity_id
             type: relatedlist
             tab: 'Workflow Transitions'
