--- a/www/plugins/demo/workflow/controllers/workflowentities/config_list.yaml
+++ b/www/plugins/demo/workflow/controllers/workflowentities/config_list.yaml
@@ -1,5 +1,5 @@
-list: $/demo/workflow/models/workflowentity/columns.yaml
-modelClass: Demo\Workflow\Models\WorkflowEntity
+list: $/demo/workflow/models/workflowitem/columns.yaml
+modelClass: Demo\Workflow\Models\WorkflowItem
 title: WorkflowEntities
 noRecordsMessage: 'backend::lang.list.no_records'
 showSetup: true
