--- a/www/plugins/demo/workflow/controllers/workflowentities/config_reorder.yaml
+++ b/www/plugins/demo/workflow/controllers/workflowentities/config_reorder.yaml
@@ -1,4 +1,4 @@
 title: WorkflowEntities
-modelClass: Demo\Workflow\Models\WorkflowEntity
+modelClass: Demo\Workflow\Models\WorkflowItem
 toolbar:
     buttons: reorder_toolbar
