--- a/www/plugins/demo/workflow/models/queueitem/fields.yaml
+++ b/www/plugins/demo/workflow/models/queueitem/fields.yaml
@@ -10,7 +10,7 @@ fields:
         label: 'Item Type'
         span: auto
         type: text
-    item_id:
+    entity_id:
         label: 'Item Id'
         span: auto
         type: text
