--- a/www/plugins/demo/workflow/models/queuepopcriterias/fields.yaml
+++ b/www/plugins/demo/workflow/models/queuepopcriterias/fields.yaml
@@ -17,8 +17,9 @@ fields:
         required: 1
         stretch: 1
         type: codeeditor
+        commentAbove: 'This should return a Queue Item to be poped.'
     plugin:
-        label: 'Plugin'
+        label: Plugin
         nameFrom: code
         descriptionFrom: version
         span: auto
