--- a/www/plugins/demo/workflow/models/workflowitem/columns.yaml
+++ b/www/plugins/demo/workflow/models/workflowitem/columns.yaml
@@ -14,8 +14,8 @@ columns:
     updated_by_id:
         label: updated_by_id
         type: number
-    entity_type:
-        label: entity_type
+    item_type:
+        label: item_type
         type: text
     entity_id:
         label: entity_id
