--- a/www/plugins/demo/workflow/plugin.yaml
+++ b/www/plugins/demo/workflow/plugin.yaml
@@ -8,7 +8,7 @@ model-alias:
     Workflow: Workflows
     Queue: Queues
     QueueItem: 'Queue Items'
-    WorkflowEntity: 'Workflow Entity'
+    WorkflowItem: 'Workflow Entity'
     WorkflowTransition: 'Workflow Transition'
 navigation:
     main-menu-item:
