--- a/www/plugins/demo/workflow/models/queueitem/columns.yaml
+++ b/www/plugins/demo/workflow/models/queueitem/columns.yaml
@@ -5,8 +5,8 @@ columns:
     queue_id:
         label: queue_id
         type: number
-    entity_id:
-        label: entity_id
+    item_id:
+        label: item_id
         type: number
     item_type:
         label: item_type
