--- a/www/plugins/demo/workflow/models/workflowitem/fields.yaml
+++ b/www/plugins/demo/workflow/models/workflowitem/fields.yaml
@@ -10,11 +10,11 @@ fields:
         span: auto
         type: relation
     item_type:
-        label: 'Entity Type'
+        label: 'Item Type'
         span: auto
         type: text
-    entity_id:
-        label: 'Entity Id'
+    item_id:
+        label: 'Item Id'
         span: auto
         type: text
     assigned_to:
@@ -24,9 +24,20 @@ fields:
         span: auto
         type: relation
     plugin:
-        label: 'Plugin'
+        label: Plugin
         nameFrom: code
         descriptionFrom: version
         span: auto
         required: 1
         type: relation
+tabs:
+    fields:
+        transitions:
+            label: Transitions
+            span: full
+            relation: HasMany
+            sourceKey: id
+            targetModel: Demo\Workflow\Models\WorkflowTransition
+            targetKey: workflow_item_id
+            type: relatedlist
+            tab: Transitions
