--- a/www/plugins/demo/workflow/models/workflowitem/fields.yaml
+++ b/www/plugins/demo/workflow/models/workflowitem/fields.yaml
@@ -32,7 +32,7 @@ fields:
         type: relation
 tabs:
     fields:
-        transitions:
+        _transitions:
             label: Transitions
             span: full
             relation: HasMany
