Added core plugin tests in workflow

--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -22,3 +22,8 @@ jobs:
         DB_CONNECTION: sqlite
         DB_DATABASE: database/database.sqlite
       run: vendor/bin/phpunit
+    - name: Execute core plugin tests via PHPUnit
+          env:
+            DB_CONNECTION: sqlite
+            DB_DATABASE: database/database.sqlite
+          run: vendor/bin/phpunit plugins/demo/core
