Added iframe support

--- a/www/plugins/demo/core/plugin.yaml
+++ b/www/plugins/demo/core/plugin.yaml
@@ -27,3 +27,11 @@ navigation:
                 label: Commands
                 url: demo/core/command
                 icon: icon-terminal
+            side-menu-item:
+                label: Iframe
+                url: demo/core/iframecontroller
+                icon: icon-external-link
+            side-menu-item2:
+                label: Test
+                url: demo/core/iframecontroller/render-iframe/test
+                icon: icon-sitemap
