Dashboard changes done

--- a/www/plugins/demo/report/models/dashboard/fields.yaml
+++ b/www/plugins/demo/report/models/dashboard/fields.yaml
@@ -34,7 +34,7 @@ fields:
         type: switch
 tabs:
     fields:
-        reports_config:
+        config_widgets:
             label: Configuration
             prompt: 'Add new item'
             span: auto
