Minmize Maximize added Twig engine added

--- a/www/plugins/demo/report/models/widget/fields.yaml
+++ b/www/plugins/demo/report/models/widget/fields.yaml
@@ -35,10 +35,18 @@ tabs:
             span: auto
             type: relation
             tab: Configuration
+        template:
+            label: Template
+            size: large
+            language: html
+            span: full
+            stretch: 0
+            type: codeeditor
+            tab: Configuration
         script:
             label: Script
             size: large
-            language: php
+            language: javascript
             span: full
             stretch: 0
             type: codeeditor
