Added some validations

--- a/www/plugins/demo/core/models/formfield/fields.yaml
+++ b/www/plugins/demo/core/models/formfield/fields.yaml
@@ -1,5 +1,6 @@
 fields:
     field:
+        emptyOption: -- None --
         label: Field
         nameFrom: name
         descriptionFrom: description
