--- a/www/plugins/demo/core/updates/version.yaml
+++ b/www/plugins/demo/core/updates/version.yaml
@@ -21,3 +21,6 @@
 1.0.8:
     - 'Created table demo_core_form_fields'
     - builder_table_create_demo_core_form_fields.php
+1.0.9:
+    - 'Created table demo_core_models'
+    - builder_table_create_demo_core_models.php
