--- a/www/plugins/demo/core/updates/version.yaml
+++ b/www/plugins/demo/core/updates/version.yaml
@@ -24,3 +24,6 @@
 1.0.9:
     - 'Created table demo_core_models'
     - builder_table_create_demo_core_models.php
+1.0.10:
+    - 'Created table demo_core_model_associations'
+    - builder_table_create_demo_core_model_associations.php
