--- a/www/plugins/demo/core/models/webhook/fields.yaml
+++ b/www/plugins/demo/core/models/webhook/fields.yaml
@@ -13,15 +13,45 @@ fields:
         span: auto
         default: 1
         type: switch
+    async:
+        label: Async
+        span: auto
+        default: 1
+        type: switch
+    plugin:
+        label: Plugin
+        nameFrom: code
+        descriptionFrom: description
+        span: auto
+        type: relation
 tabs:
     fields:
+        model_ref:
+            label: Model
+            nameFrom: name
+            descriptionFrom: description
+            span: auto
+            required: 1
+            type: relation
+            tab: Input
+        event:
+            label: Event
+            options:
+                created: Created
+                updated: Updated
+                deleted: Deleted
+            showSearch: true
+            span: auto
+            required: 1
+            type: dropdown
+            tab: Input
         condition:
             label: Condition
             size: large
             language: php
             span: full
             type: codeeditor
-            tab: input
+            tab: Input
         url:
             label: URL
             span: auto
