--- a/www/plugins/demo/notification/models/notification/fields.yaml
+++ b/www/plugins/demo/notification/models/notification/fields.yaml
@@ -14,10 +14,10 @@ fields:
         span: auto
         default: 1
         type: switch
-    queued:
-        label: Queued
+    enable_logging:
+        label: 'Enable Logging'
         span: auto
-        default: 0
+        default: 1
         type: switch
     channel:
         label: Channel
@@ -49,7 +49,7 @@ tabs:
             span: auto
             required: 1
             type: relation
-            tab: Execution
+            tab: Input
         event:
             label: Event
             options:
@@ -60,14 +60,14 @@ tabs:
             span: auto
             required: 1
             type: dropdown
-            tab: Execution
+            tab: Input
         condition:
             label: Condition
             size: large
             language: php
             span: auto
             type: codeeditor
-            tab: Execution
+            tab: Input
 secondaryTabs:
     fields:
         _notification_subscribers:
