--- a/www/plugins/demo/core/updates/version.yaml
+++ b/www/plugins/demo/core/updates/version.yaml
@@ -27,3 +27,15 @@
 1.0.10:
     - 'Created table demo_core_model_associations'
     - builder_table_create_demo_core_model_associations.php
+1.0.11:
+    - 'Created table demo_core_permissions'
+    - builder_table_create_demo_core_permissions.php
+1.0.12:
+    - 'Created table demo_core_permission_policies'
+    - builder_table_create_demo_core_permission_policies.php
+1.0.13:
+    - 'Created table demo_core_role_policy_associations'
+    - builder_table_create_demo_core_role_policy_associations.php
+1.0.14:
+    - 'Created table demo_core_permission_policy_associations'
+    - builder_table_create_demo_core_permission_policy_associations.php
