--- a/www/plugins/demo/core/updates/version.yaml
+++ b/www/plugins/demo/core/updates/version.yaml
@@ -31,7 +31,7 @@
     - 'Created table demo_core_permissions'
     - builder_table_create_demo_core_permissions.php
 1.0.12:
-    - 'Created table demo_core_permission_policies'
+    - 'Created table demo_core_security_policies'
     - builder_table_create_demo_core_permission_policies.php
 1.0.13:
     - 'Created table demo_core_role_policy_associations'
@@ -39,3 +39,9 @@
 1.0.14:
     - 'Created table demo_core_permission_policy_associations'
     - builder_table_create_demo_core_permission_policy_associations.php
+1.0.15:
+    - 'Created table demo_core_roles'
+    - builder_table_create_demo_core_roles.php
+1.0.16:
+    - 'Created table demo_core_user_role_associations'
+    - builder_table_create_demo_core_user_role_associations.php
