--- a/www/plugins/demo/core/controllers/usercontroller/config_reorder.yaml
+++ b/www/plugins/demo/core/controllers/usercontroller/config_reorder.yaml
@@ -1,4 +1,4 @@
 title: UserController
-modelClass: Demo\Core\Models\UserModel
+modelClass: Demo\Core\Models\CoreUser
 toolbar:
     buttons: reorder_toolbar
