--- a/www/composer.json
+++ b/www/composer.json
@@ -42,7 +42,8 @@
         "wikimedia/composer-merge-plugin": "dev-master",
         "phpunit/phpunit": "^6.5",
         "maatwebsite/excel": "^3.1",
-        "dompdf/dompdf": "^0.8.3"
+        "dompdf/dompdf": "^0.8.3",
+        "ext-json": "*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.7",
